--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@react-navigation/stack": "^5.14.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1-0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-webview": "^11.3.2",
