--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -19,6 +21,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
