--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.1.0",
     "react-native-shadow": "^1.2.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-svg": "^12.1.1-0",
     "react-native-svg-transformer": "^0.14.3",
