--- a/ios/FiaipApp/Info.plist
+++ b/ios/FiaipApp/Info.plist
@@ -35,8 +35,32 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Ho bisogno dell'accesso alla libreria</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Ho bisogno dell'accesso alla camera</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Usiamo la tua posizione per localizzarti</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Usiamo la tua posizione per localizzarti</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Usiamo la tua posizione per localizzarti</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>ho bisogno</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>hho bisogno</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>ho bisogno</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SFProDisplay-Bold.otf</string>
+		<string>SFProDisplay.otf</string>
+		<string>LucidaGrande.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
