--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-svg": "^12.1.1-0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-video": "^5.1.1",
-    "react-native-video-controls": "^2.8.1",
-    "react-native-webview": "^11.3.2"
+    "react-native-webview": "^11.3.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
