--- a/ios/FiaipApp/Info.plist
+++ b/ios/FiaipApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>FiaipApp</string>
+	<string>FIAIP App</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -36,15 +36,19 @@
 		</dict>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
+	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua fotocamera per scattare foto.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione in background.</string>
+	<string>Consenti all'app di accedere alla tua fotocamera per scattare foto.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione in background.</string>
+	<string>Consenti all'app di accedere alla tua posizione in background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Consenti all'app di accedere alla tua posizione in background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Consenti all'app di accedere alla tua posizione</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Consenti all'app di accedere al tuo microfono per caricare le foto</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProDisplay-Bold.otf</string>
