--- a/ios/FiaipApp/Info.plist
+++ b/ios/FiaipApp/Info.plist
@@ -36,19 +36,19 @@
 		</dict>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
+	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua fotocamera per scattare foto.</string>
+	<string>Consenti all'app di accedere alla tua fotocamera per scattare foto.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione in background.</string>
+	<string>Consenti all'app di accedere alla tua posizione in background.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione in background.</string>
+	<string>Consenti all'app di accedere alla tua posizione in background.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua posizione</string>
+	<string>Consenti all'app di accedere alla tua posizione</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Consenti all&apos;app di accedere al tuo microfono per caricare le foto</string>
+	<string>Consenti all'app di accedere al tuo microfono per caricare le foto</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Consenti all&apos;app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
+	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProDisplay-Bold.otf</string>
