--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,8 +134,9 @@ android {
         applicationId "com.fiaipapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 3
+        versionCode 7
         versionName "1.0.0"
+        multiDexEnabled true
     }
     splits {
         abi {
