--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-html-to-pdf": "^0.11.0",
     "react-native-image-picker": "^4.0.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^3.0.5",
