--- a/ios/FiaipApp/Info.plist
+++ b/ios/FiaipApp/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -25,19 +25,19 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
+	<string>Consenti all&apos;app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua fotocamera per scattare foto.</string>
+	<string>Consenti all&apos;app di accedere alla tua fotocamera per scattare foto da caricare all&apos;interno della creazione dei fascicoli.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua posizione in background.</string>
+	<string>Consenti all&apos;app di geolocalizzarti per permettere una rapida ricerca basata sull’attuale posizione.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua posizione in background.</string>
+	<string>Consenti all&apos;app di geolocalizzarti per permettere una rapida ricerca basata sull’attuale posizione.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua posizione</string>
+	<string>Consenti all&apos;app di geolocalizzarti per permettere una rapida ricerca basata sull’attuale posizione.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Consenti all'app di accedere al tuo microfono per caricare le foto</string>
+	<string>Consenti all&apos;app di accedere al tuo microfono per caricare le foto</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Consenti all'app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
+	<string>Consenti all&apos;app di accedere alla tua galleria per caricare le foto nei fascicoli.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProDisplay-Bold.otf</string>
